--- a/Alura/Typescript/alurabank/package.json
+++ b/Alura/Typescript/alurabank/package.json
@@ -1,11 +1,8 @@
 {
-  "name": "app",
+  "name": "alurabank",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
-  "directories": {
-    "lib": "lib"
-  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "compile": "tsc",
@@ -14,6 +11,6 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "typescript": "^4.2.4"
+    "typescript": "^2.3.2"
   }
 }
