--- a/Alura/Typescript/alurabank/tsconfig.json
+++ b/Alura/Typescript/alurabank/tsconfig.json
@@ -3,5 +3,8 @@
         "target": "es6",
         "outDir": "app/js",
         "noEmitOnError": true
-    }
+    },
+    "include": [
+        "app/ts/**/*"
+    ]
 }
