--- a/Alura/Testes Angular/package.json
+++ b/Alura/Testes Angular/package.json
@@ -8,6 +8,7 @@
     "test": "ng test",
     "test-common": "ng test --browsers Chrome,Firefox",
     "test-ci": "ng test --watch=false --browsers ChromeHeadless",
+    "test-custom": "ng test --watch=false --browsers CustomFirefox",
     "lint": "ng lint",
     "e2e": "ng e2e"
   },
