--- a/Alura/Testes Angular/.vscode/settings.json
+++ b/Alura/Testes Angular/.vscode/settings.json
@@ -1,4 +1,3 @@
 {
-    "git.ignoreLimitWarning": true,
-    "angular.enable-strict-mode-prompt": false
+    "typescript.preferences.quoteStyle": "single"
 }
